[package]
name = "carchive"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
description = "Content-addressed archive coding"

[dependencies]
byteorder = "1.1"
err-derive = "0.1.5"

[dev-dependencies]
structopt = "0.2"
data-encoding = "2.1.1"
criterion = "0.2"
rand = "0.5"

[[bench]]
name = "bench"
harness = false
